# vibe-llama

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  debug_extracted_code.txt  debug_response.txt  pyproject.toml
.github/workflows/: build.yml  release_core.yml  release_main.yml  test.yml  test_push.yml
data/test/: file.txt
documentation/: docs_chunks.csv  llama-index-workflows.md  llamacloud.md  llamadeploy.md  llamaindex.md
documentation/skills/llamactl/: REFERENCE.md
documentation/skills/pdf-processing/: SKILL.md
documentation/skills/structured-data-extraction/: REFERENCE.md  SKILL.md
documentation/skills/text-classification/: REFERENCE.md  SKILL.md
src/vibe_llama/: constants.py  logo.py  main.py
src/vibe_llama/docuflows/: __init__.py  ai_agent_cli.py  cli.py  core.py  diff_editing_workflow.py  utils.py
src/vibe_llama/docuflows/agent/: __init__.py  utils.py
src/vibe_llama/docuflows/commons/: __init__.py  constants.py  core.py  typed_state.py  typed_state_editing.py
src/vibe_llama/docuflows/editing/: __init__.py
src/vibe_llama/docuflows/handlers/: __init__.py  other_handlers.py  workflow_config.py  workflow_editing.py  workflow_generation.py  workflow_help.py  workflow_load.py  workflow_testing.py
src/vibe_llama/docuflows/prompts/: __init__.py
src/vibe_llama/docuflows/tools/: __init__.py
src/vibe_llama/scaffold/: __init__.py  copy_templates.py  project_files.py  scaffold.py  terminal.py
src/vibe_llama/scaffold/samples/: __init__.py  base_example.py  document_parsing.py  human_in_the_loop.py  invoice_extraction.py  rag.py  web_scraping.py
src/vibe_llama/sdk/: __init__.py  base.py  errors.py  mcp.py  utils.py
src/vibe_llama/starter/: __init__.py  constants.py  data.py  mcp.py  terminal.py  text_chunks.py  utils.py
src/vibe_llama/starter/stylesheet/: select.tcss
templates/base_example/: README.md  pyproject.toml  workflow.py
templates/basic/: README.md  pyproject.toml
templates/basic/src/basic/: workflow.py
templates/document_parsing/: README.md  pyproject.toml  workflow.py
templates/document_parsing/src/document_parsing/: workflow.py
templates/human_in_the_loop/: README.md  pyproject.toml  workflow.py
templates/human_in_the_loop/src/human_in_the_loop/: workflow.py
templates/invoice_extraction/: README.md  pyproject.toml  workflow.py
templates/invoice_extraction/src/invoice_extraction/: workflow.py
templates/rag/: README.md  pyproject.toml  workflow.py
templates/rag/src/rag/: workflow.py
templates/web_scraping/: README.md  pyproject.toml  workflow.py
templates/web_scraping/src/web_scraping/: workflow.py
tests/: conftest.py  test_starter.py
tests/docuflows/: test_agent.py  test_editing.py  test_tools.py
tests/docuflows/commons/: test_commons_base.py  test_commons_core.py
tests/docuflows/handlers/: test_config.py  test_editing.py  test_generation.py  test_help.py  test_load.py  test_testing.py
tests/scaffold/: test_scaffold.py
tests/sdk/: test_mcp.py  test_scaffold.py  test_starter.py
tests/starter/: test_base.py  test_retriever.py
