[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "mypy>=1.17.1",
  "pre-commit>=4.3.0",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0"
]

[project]
name = "vibe-llama"
version = "0.4.0"
description = "vibe-llama is a set of tools that are designed to help developers build working and reliable applications with LlamaIndex, LlamaCloud Services and llama-index-workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "bm25s>=0.2.13",
  "fastmcp>=2.11.3",
  "httpx>=0.28.1",
  "llama-cloud-services>=0.6.62",
  "llama-index-core>=0.13.3",
  "llama-index-llms-openai>=0.5.4",
  "llama-index-llms-anthropic>=0.8.4",
  "prompt-toolkit>=3.0.51",
  "pystemmer>=3.0.0",
  "rich>=14.1.0",
  "rich-gradient>=0.3.3"
]

[project.scripts]
vibe-llama = "vibe_llama.main:main"

[tool.hatch.build.targets.wheel]
only-include = ["src/vibe_llama"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.mypy]
exclude = [
  "tests/",
  "src/vibe_llama/docuflows/"
]
namespace_packages = true
explicit_package_bases = true
disallow_untyped_defs = true
ignore_missing_imports = true
python_version = "3.10"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = [
  "-s",
  "-v",
  "--tb=short"
]
