[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basic"
version = "0.1.0"
description = "A base example that showcases usage patterns for workflows"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "llama-index-workflows",
  "llama-index-llms-openai"
]

[tool.llamadeploy.workflows]
default = "basic.workflow:workflow"
