[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "human-in-the-loop"
version = "0.1.0"
description = "A workflow showcasing how to use human in the loop"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "llama-index-workflows",
  "llama-index-llms-openai"
]

[tool.llamadeploy.workflows]
default = "human_in_the_loop.workflow:workflow"
